# fude

./: Cargo.toml
src/: lib.rs  page.rs  unit.rs
src/builders/: font_builder.rs  mod.rs
src/font/: font_widths.rs  mod.rs
src/font/ttf/: mod.rs  ttf_font.rs  ttf_font_descriptor.rs  ttf_font_file.rs
src/fude/: font.rs  gen.rs  mod.rs
src/macros/: log.rs
src/mupdf/: finalize.rs  font.rs  gen.rs  mod.rs  text.rs
src/pdf/: mod.rs
src/pdf/font/: font_descriptor.rs  font_stretch.rs  font_subsubtype.rs  font_subtype.rs  font_weight.rs  mod.rs
src/pdf/page/: mod.rs  page.rs  pages.rs
src/pdf/resource/: mod.rs  resources.rs
src/pdf/root/: root.rs
src/traits/: identified_object.rs  mod.rs  object_export.rs  pdf_integrate.rs
src/types/: distance.rs  mod.rs  page_format.rs
tests/: create.rs  text.rs
