[package]
name = "mudpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = { version = "0.27.0", features = [
    "embed_image",
    "pom_parser",
    "nom_parser",
] }
allsorts = "0.9.0"
rusttype = "0.9.2"
