[package]
name = "fude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.31.0"
allsorts = "0.14.0"
ttf-parser = "0.19.0"
log = {version = "0.4.0", optional = true}

[features]
log = ["dep:log"]
